--- a/Paper/references.bib
+++ b/Paper/references.bib
@@ -1,10 +1,63 @@
+@inproceedings{Borazio2012,
+author = {Borazio, Marko and {Van Laerhoven}, Kristof},
+booktitle = {Proceedings of the 2nd ACM SIGHIT symposium on International health informatics - IHI '12},
+doi = {10.1145/2110363.2110375},
+isbn = {9781450307819},
+keywords = {activity recognition,long-term monitoring,sleep detection},
+pages = {71--80},
+publisher = {ACM Press},
+title = {{Combining wearable and environmental sensing into an unobtrusive tool for long-term sleep studies}},
+year = {2012}
+}
+
+@inproceedings{Srinivasan2010,
+  title={Activity Recognition using Actigraph Sensor},
+  author={Srinivasan, R. and Chen, C. and Cook, D.J.},
+  booktitle={Proceedings of the Fourth Int. Workshop on Knowledge Discovery form Sensor Data (ACM SensorKDD'10), Washington, DC, July},
+  pages={25--28},
+  year={2010}
+}
+
+@article{Bao2004,
+  title={Activity recognition from user-annotated acceleration data},
+  author={Bao, L. and Intille, S.},
+  journal={Pervasive Computing},
+  pages={1--17},
+  year={2004},
+  publisher={Springer}
+}
+
+@inproceedings{Ravi2005,
+author = {Ravi, Nishkam and Dandekar, Nikhil and Mysore, Preetham and Littman, M.L.},
+booktitle = {Proceedings of the National Conference on Artificial Intelligence},
+number = {3},
+pages = {1541},
+publisher = {Menlo Park, CA; Cambridge, MA; London; AAAI Press; MIT Press; 1999},
+title = {{Activity recognition from accelerometer data}},
+volume = {20},
+year = {2005}
+}
+
+@article{wyss2010recognition,
+  title={{Recognition of Military-Specific Physical Activities With Body-Fixed Sensors}},
+  author={Wyss, T. and Mader, U.},
+  journal={{Military Medicine}},
+  volume={175},
+  number={11},
+  pages={858--864},
+  year={2010},
+  publisher={AMSUS-Association of Military Surgeons of the US}
+}
+
 @article{Baxter,
 author = {Baxter, L K},
 file = {:C$\backslash$:/Users/tgpuppen/AppData/Local/Mendeley Ltd./Mendeley Desktop/Downloaded/Baxter - Unknown - Capacitive Sensors.pdf:pdf},
 journal = {Sensors (Peterborough, NH)},
 pages = {1--17},
-title = {{Capacitive Sensors}}
+title = {{Capacitive Sensors}},
+year={1996}
 }
+
 @article{Smith1999,
 author = {Smith, Joshua Reynolds and Gershenfeld, Neil and Benton, Stephan A},
 file = {:C$\backslash$:/Users/tgpuppen/AppData/Local/Mendeley Ltd./Mendeley Desktop/Downloaded/Smith, Gershenfeld, Benton - 1999 - Electric Field Imaging.pdf:pdf},
@@ -23,19 +76,16 @@ year = {1996}
 @article{Wimmer2007,
 author = {Wimmer, Raphael and Kranz, Matthias and Boring, Sebastian and Schmidt, Albrecht},
 doi = {10.1109/PERCOM.2007.1},
-file = {:C$\backslash$:/Users/tgpuppen/AppData/Local/Mendeley Ltd./Mendeley Desktop/Downloaded/Wimmer et al. - 2007 - A Capacitive Sensing Toolkit for Pervasive Activity Detection and Recognition.pdf:pdf},
 isbn = {0-7695-2787-6},
 journal = {Fifth Annual IEEE International Conference on Pervasive Computing and Communications (PerCom'07)},
 pages = {171--180},
-publisher = {Ieee},
+publisher = {IEEE},
 title = {{A Capacitive Sensing Toolkit for Pervasive Activity Detection and Recognition}},
-url = {http://ieeexplore.ieee.org/lpdocs/epic03/wrapper.htm?arnumber=4144762},
 year = {2007}
 }
 @inproceedings{Grosse-puppendahl2012,
 author = {Grosse-Puppendahl, Tobias and Braun, Andreas},
 booktitle = {Embedded World Conference 2012},
-file = {:C$\backslash$:/Users/tgpuppen/Documents/Konferenzen/EmbeddedWorld 2012/Tex/Paper.pdf:pdf},
 keywords = {capacitive proximity sensing,gesture recognition},
 pages = {1--10},
 title = {{Honeyfish - a high resolution gesture recognition system based on capacitive proximity sensing}},
@@ -80,20 +130,175 @@ year = {2007}
 	location = {Cambridge, Massachusetts, USA},
 	pages = {57--64},
 	numpages = {8},
-	url = {http://doi.acm.org/10.1145/1709886.1709898},
 	doi = {10.1145/1709886.1709898},
 	acmid = {1709898},
 	publisher = {ACM},
 	address = {New York, NY, USA},
 	keywords = {gesture detection, wearable interaction, wrist-worn RFID},
 } 
-@article{wyss2010recognition,
-  title={Recognition of Military-Specific Physical Activities With Body-Fixed Sensors},
-  author={Wyss, T. and Mader, U.},
-  journal={Military medicine},
-  volume={175},
-  number={11},
-  pages={858--864},
-  year={2010},
-  publisher={AMSUS-Association of Military Surgeons of the US}
+@inproceedings {phealth:maja,
+	title = {{ADL Recognition Based on the Combination of RFID and Accelerometer Sensing}},
+	booktitle = {Proceedings of the 2nd International Conference on Pervasive Computing Technologies for Healthcare (Pervasive Health 2008)},
+	year = {2008},
+	month = {January},
+	pages = {258{\textendash}263},
+	publisher = {IEEE Xplore},
+	organization = {IEEE Xplore},
+	address = {Tampere, Finland},
+	author = {Stikic, Maja and Huynh, T{\^a}m and Van Laerhoven, Kristof and Schiele, Bernt}
+}
+@inproceedings {WSNHC2007stikic,
+	title = {Recording Housekeeping Activities with Situated Tags and Wrist-Worn Sensors: Experiment Setup and Issues Encountered},
+	booktitle = {Proceedings of the 1st International Workshop on Wireless Sensor Networks for Health Care (WSNHC 2007)},
+	year = {2007},
+	month = {June},
+	address = {Braunschweig, Germany},
+	attachments = {http://www.d2.mpi-inf.mpg.de/sites/default/files/wsnhc07_stikic_van_laerhoven.pdf},
+	author = {Stikic, Maja and Van Laerhoven, Kristof}
+}
+@inproceedings{minnen_2006,
+	author={Minnen, D. and Starner, T. and Essa, M. and Isbell, C.},
+	booktitle={Proceedings of the 10th IEEE International Symposium on Wearable Computers (ISWC '10)},
+	title={Discovering Characteristic Actions from On-Body Sensor Data},
+	year={2006},
+	month={Oct.},
+	pages={11--18},
+	keywords={activity discovery;activity recognition problem;on-body sensor data;protein binding sites;three-axis inertial sensor;time series data;time warping;biology computing;biosensors;data analysis;inertial systems;proteins;time warp simulation;},
+	doi={10.1109/ISWC.2006.286337},
+	ISSN={1550-4816},
+}
+@article{Philipose_2004,
+	author = {Philipose, Matthai and Fishkin, Kenneth P. and Perkowitz, Mike and Patterson, Donald J. and Fox, Dieter and Kautz, Henry and Hahnel, Dirk},
+	title = {Inferring Activities from Interactions with Objects},
+	journal = {IEEE Pervasive Computing},
+	issue_date = {October 2004},
+	volume = {3},
+	number = {4},
+	month = {Oct.},
+	year = {2004},
+	issn = {1536-1268},
+	pages = {50--57},
+	numpages = {8},
+	url = {http://dx.doi.org/10.1109/MPRV.2004.7},
+	doi = {10.1109/MPRV.2004.7},
+	acmid = {1038150},
+	publisher = {IEEE Educational Activities Department},
+	address = {Piscataway, NJ, USA},
+	keywords = {ADL monitoring, Proact, Proactive Activity Toolkit, context-aware computing, context-aware computing, sensor networks, ADL monitoring, Proactive Activity Toolkit, Proact, sensor networks},
+} 
+
+@inproceedings{Fishkin_2005,
+	author={Fishkin, K.P. and Philipose, M. and Rea, A.},
+	booktitle={Proceedings of the 9th IEEE International Symposium on Wearable Computers (ISWC '05)},
+	title={Hands-on RFID: wireless wearables for detecting use of objects},
+	year={2005},
+	month={Oct.},
+	pages={38--41},
+	keywords={ RFID; person-object interaction; wireless wearable device; human computer interaction; mobile communication; radiofrequency identification; wearable computers;},
+	doi={10.1109/ISWC.2005.25},
+}
+
+@inproceedings{patterson2005fga,
+	Author = {Patterson, DJ and Fox, D. and Kautz, H. and Philipose, M.},
+	Booktitle = {Proceedings of the 9th IEEE International Symposium on Wearable Computers (ISWC '05)},
+	Date-Added = {2006-05-01 15:48:48 +0200},
+	Date-Modified = {2007-03-09 16:57:25 +0100},
+	Keywords = {activity, WSN seminar, wearable, RFID},
+	Pages = {44--51},
+	Title = {{Fine-grained activity recognition by aggregating abstract object usage}},
+	Year = {2005}
+}
+
+@INPROCEEDINGS{Amft2005,
+	author = {Oliver Amft and Holger Junker and Gerhard Tr\"oster},
+	title = {Detection of Eating and Drinking Arm Gestures Using Inertial Body-Worn Sensors},
+	booktitle = {Proceedings of the 9th IEEE International Symposium on Wearable Computers (ISWC '05)},
+	year = {2005},
+	pages = {160--163},
+	publisher = {IEEE}
+}
+
+@article{Stiefmeier08,
+	author = {Stiefmeier, Thomas and Roggen, Daniel and Ogris, Georg and Lukowicz, Paul and Tr\"{o}ster, Gerhard},
+	title = {Wearable Activity Tracking in Car Manu- facturing},
+	journal = {IEEE Pervasive Computing},
+	volume = {7},
+	issue = {2},
+	year = {2008},
+	issn = {1536-1268},
+	pages = {42--50},
+	numpages = {9},
+	url = {http://portal.acm.org/citation.cfm?id=1399081.1399121},
+	doi = {10.1109/MPRV.2008.40},
+	acmid = {1399121},
+	publisher = {IEEE Educational Activities Department},
+	address = {Piscataway, NJ, USA},
+	keywords = {artificial intelligence, wearable AI, pattern recognition, models, applications, mobile applications, computers in education},
+}
+
+@ARTICLE{Ward_2006,
+	author={Ward, J.A. and Lukowicz, P. and Troster, G. and Starner, T.E.},
+	journal={Pattern Analysis and Machine Intelligence, IEEE Transactions on},
+	title={Activity Recognition of Assembly Tasks Using Body-Worn Microphones and Accelerometers},
+	year={2006},
+	month={Oct.},
+	volume={28},
+	number={10},
+	pages={1553--1567},
+	keywords={accelerometers;activity recognition;assembly tasks;body-worn microphones;hidden Markov models;linear discriminant analysis;maintenance work;wearable computer;accelerometers;assembling;hidden Markov models;maintenance engineering;microphones;production engineering computing;wearable computers;},
+	doi={10.1109/TPAMI.2006.197},
+	ISSN={0162-8828}
+}
+
+@inproceedings{Huynh_2007,
+	author = {Hu\`{y}nh, T\^{a}m and Blanke, Ulf and Schiele, Bernt},
+	title = {Scalable recognition of daily activities with wearable sensors},
+	booktitle = {Proceedings of the 3rd international conference on Location-and context-awareness},
+	series = {LoCA'07},
+	year = {2007},
+	isbn = {3-540-75159-9, 978-3-540-75159-5},
+	location = {Oberpfaffenhofen, Germany},
+	pages = {50--67},
+	numpages = {18},
+	url = {http://dl.acm.org/citation.cfm?id=1777235.1777241},
+	acmid = {1777241},
+	publisher = {Springer-Verlag},
+	address = {Berlin, Heidelberg},
+} 
+
+@INPROCEEDINGS{Holleczek_2010,
+	author={Holleczek, T. and Schoch, J. and Arnrich, B. and Trö andster, G.},
+	booktitle={Proceedings of the 14th IEEE International Symposium on Wearable Computers (ISWC '10) },
+	title={Recognizing turns and other snowboarding activities with a gyroscope},
+	year={2010},
+	month={Oct.},
+	pages={1--8},
+	keywords={GPS receiver;gyroscope;mobile computing device;snowboarding activity recognition;turns recognition;wearable sports trainer;Global Positioning System;gyroscopes;mobile computing;sensors;sports equipment;sportswear;wearable computers;},
+	doi={10.1109/ISWC.2010.5665871},
+	ISSN={1550-4816},
+}
+
+@incollection {Altun_2010,
+	author = {Altun, Kerem and Barshan, Billur},
+	affiliation = {Department of Electrical and Electronics Engineering, Bilkent University, Ankara, Turkey},
+	title = {Human Activity Recognition Using Inertial/Magnetic Sensor Units},
+	booktitle = {Human Behavior Understanding},
+	series = {Lecture Notes in Computer Science},
+	editor = {Salah, Albert and Gevers, Theo and Sebe, Nicu and Vinciarelli, Alessandro},
+	publisher = {Springer Berlin / Heidelberg},
+	keyword = {Computer Science},
+	pages = {38--51},
+	volume = {6219},
+	year = {2010}
+}
+
+@INPROCEEDINGS{Krause_2003,
+	author={Krause, A. and Siewiorek, D.P. and Smailagic, A. and Farringdon, J.},
+	booktitle={Proceedings of the 7th IEEE International Symposium on Wearable Computers (ISWC '03)},
+	title={Unsupervised, dynamic identification of physiological and activity context in wearable computing},
+	year={2003},
+	month={Oct.},
+	pages={88--97},
+	publisher = {IEEE Computer Society},
+	address = {Washington, DC, USA},
 }
