writing paper - related work on activity recognition - structure overview and section labels

--- a/Paper/Paper.tex
+++ b/Paper/Paper.tex
@@ -61,25 +61,31 @@ Capacitive proximity sensors can indirectly measure the distance and nature of a
 
 There are several intuitive examples for which a combination of accelerometer-based activity recognition with a capacitive proximity sensor reveals its strength. For example, it may be conducted which material is placed underneath the hand. The capacitive proximity sensor would return a different measurement result for a hand placed on a couch covered with fabric than a hand placed a wooden table. Moreover, the approximate distance to objects can be exploited to identify activities like grasping into a locker or a refrigerator  to prepare food.
 
-\section{Related Work}
+The remainder of this paper is  is structured as follows: First, Section \ref{sect:related} is dedicated to related work work in activity recognition, in particular considering approaches with multiple sensor modalities. Section \ref{sect:hardware} will present the hardware based on which a wrist-worn sensor prototype was built, fusing together an inertial data logger and a capacitive sensor integrated in a wristband. The experimental setup, the scripted scenario with daily activities and the activity recognition evaluation results, showing the performance boost of the capacitive sensor unit, are given in Section \ref{sect:experiment}. The paper is wrapped up with a conclusions section enumerating the findings of the paper, as well as pointing out future research potential.
 
+
+
+
+\section{Related Work}
+\label{sect:related}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 The field of activity recognition relying on wearable sensors mostly considers inertial data from the participants body to infer performed activities, such as in the works of \cite{Ravi2005,Bao2004,Srinivasan2010,Amft2005}. The acceleration data is often augmented with data from sensors such as gyroscopes \cite{Holleczek_2010}, magnetometers \cite{Altun_2010}, ambient light \cite{Borazio2012} or ambient and skin temperature \cite{Krause_2003}, aiming at extracting more motion and environmental context of the user. Researchers in \cite{wyss2010recognition}, for example, use heart rate information additionally to the accelerometer to detect military related activities like lifting and lowering loads or even digging. In \cite{Ward_2006}, workshop assembly activities were detected by augmenting acceleration sensors with microphones.
 
-The works of \cite{Fishkin_2005} and \cite{patterson2005fga} show that detecting objects the user touches or uses can be very helpful for activity recognition, including activities of daily living \cite{phealth:maja} and \cite{Philipose_2004}, activity tracking in car manufacturing \cite{Stiefmeier08}, etc. Berlin et al. \cite{berlin_laerhoven_tei_2010} have augmented a wrist-worn accelerometer sensor node with an RFID bracelet to be able to detect objects a human is interacting with, aiming both at household as well as gardening activities.
+The works of \cite{Fishkin_2005} and \cite{patterson2005fga} show that detecting objects the user touches or uses can be very helpful for activity recognition. By using RFID readers that are embedded in gloves or bracelets at the wrist and RFID tags attached to various objects of interest, one can detect the object grasped and used by the user, thus aiding the activity recognition in various application scenarios, such as activities of daily living \cite{phealth:maja} and \cite{Philipose_2004}, activity tracking in car manufacturing \cite{Stiefmeier08}, or household and gardening activities \cite{berlin_laerhoven_tei_2010}. 
 
+Our approach to enhance the inertial data from a wearable sensor is quite similar to the RFID scenarios just mentioned, as it also relies on a single wearable sensor and thus is aiming at an unobtrusive deployment. The main difference lies in the fact that we do not need accurate detection of tagged objects, but are only interested in the proximity to various objects which, as we expect, could boost activity recognition.
 
-% physical activities with accelerometers detected via motifs \cite{minnen_2006}
+% While the RFID gloves or bracelets might not have reached user acceptance, and deploying tags in the user's home might appear cumbersome and still quite intrusive, our approach considers a single wrist-worn sensor unit consisting of an accelerometer and proximity sensor.
+% Berlin et al. \cite{berlin_laerhoven_tei_2010} have also fused and benchmarked a wrist-worn accelerometer sensor node with an RFID bracelet to be able to detect objects a human is interacting with, aiming both at household as well as gardening activities.
 
-% detection of eating and drinking activities from acceleration sensors \cite{Amft2005}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 \begin{figure}[htbp]
 	\centering
 		\includegraphics[width=1.00\textwidth]{Images/modes.pdf}
-	\caption{Three different capacitive proximity sensing modes can be distinguished. The sensing electrodes build up an electric field to objects in the environment, illustrated with a cloud. \cite{Smith1996}}
+	\caption{Three different capacitive proximity sensing modes can be distinguished \cite{Smith1996}. The sensing electrodes build up an electric field to objects in the environment, illustrated with a cloud.}
 	\label{fig:modes}
 \end{figure}
 
@@ -92,6 +98,7 @@ In previous works, capacitive proximity sensors were applied in various fields o
 
 
 \section{Hardware}
+\label{sect:hardware}
 This section presents the two components of the required hardware, the wrist-worn activity data logger tailored to capture acceleration data, and the capacitive proximity sensor used for distance measurements.
 
 \subsection{Activity Data Logger}
@@ -119,7 +126,8 @@ The capacitive proximity sensor performs measurements in loading mode. Two elect
 	\label{fig:schematic}
 \end{figure}
 
-The sensing circuit schematic is shown in Figure \ref{fig:schematic}. It is based on a timer that controls the charging and discharging cycles of the virtual capacitor that is built by the sensing electrode and the surrounding environment. The timer toggles from charge to discharge at the time when a threshold voltage at the capacitor is reached. This results in an astable operation with succeeding charge/discharge cycles. When the capacitance of the virtual capacitor increases, the charging time will also increase and vice-versa. Therefore, the capacitance is inversely proportional to the number of charging cycles in a given time span. In order to guard the sensor from measuring the capacitance to underlying objects, a shield electrode is placed directly underneath the measuring electrode. The shield is driven with the same potential as the sensing electrode, such that the the capacitance between the two electrodes is negligible. Using this shielding method the measured capacitance will only be slightly affected by the grounded underlying arm.
+The sensing circuit schematic is shown in Figure \ref{fig:schematic}. It is based on a timer that controls the charging and discharging cycles of the virtual capacitor that is built by the sensing electrode and the surrounding environment. The timer toggles from charge to discharge at the time when a threshold voltage at the capacitor is reached. This results in an astable operation with succeeding charge/discharge cycles. When the capacitance of the virtual capacitor increases, the charging time will also increase and vice-versa. Therefore, the capacitance is inversely proportional to the number of charging cycles in a given time span. In order to guard the sensor from measuring the capacitance to underlying objects, a shield electrode is placed directly underneath the measuring electrode. The shield is driven with the same potential as the sensing electrode, such that the the capacitance between the two electrodes is negligible. Using this shielding method the measured capacitance will only be slightly 
+affected by the grounded underlying arm.
 
 \begin{figure}
 	\centering
@@ -140,6 +148,7 @@ Figure \ref{fig:cap_sensor} shows the the wrist-worn prototype used in the evalu
 Figure \ref{fig:pseudocode} illustrates the operations required for a measurement cycle. The proximity sensor board generates a clock signal with varying frequency depending on the charge and discharge cycles. The HedgeHog measures the resulting capacitance by counting the signal's edges over a gate time of approximately 9.5ms. During that counting phase, the HedgeHog is sent to sleep in order to reduce power consumption. In the following, the HedgeHog applies run-length encoding on the measured data to reduce overhead and periodically logs the data to the integrated SD card.
 
 \section{Experiment}
+\label{sect:experiment}
 
 This section presents the experimental setup including the activities and the participants, as well as the findings that were obtained during the evaluation.
 
@@ -172,10 +181,11 @@ In order to evaluate if capacitive proximity sensors in wrist-bands can enhance 
 The classifier was trained with various features that were extracted from windows with the length of 1 second. It turned out that greater window sizes do not provide better results. In order to suppress noise contained in the capacitive proximity sensing data, we applied a moving average filter with a kernel size of 10. The final feature set contained the arithmetic mean and standard variance of both accelerometer and proximity data. These simple feature types represent standard features applied in activity recognition.
 
 \subsection{Evaluation Results}
-
+\label{sect:evaluation}
 
 
 \section{Conclusion and Outlook}
+\label{sect:conclusions}
 
 We have shown that current wearable inertial sensing devices for activity recognition can be significantly enhanced by integrating a capacitive proximity sensor into the wristband. Regarding the classification accuracy, we obtained an overall increase in correctly classified instances of TODO percent. Some classes, for instance ``preparing bread'' and ``drinking'', could benefit very much from proximity-related sensor data. For such classes the classification performance could be boosted by up to TODO percent. 
 
@@ -184,6 +194,7 @@ The classification results could be improved by the usage of more than one sensi
 Capacitive proximity sensors represent a suitable new input modality for future activity recognition systems. The low power consumption as well as the invisible integration of a sensor into the wristband meets an essential requirement of wearable applications. Especially in AAL environments, these systems can help monitoring the course of chronic diseases by recognizing activities of daily life. This may improve the quality of life of persons affected and their caregivers. 
 
 \section*{Acknowledgments}
+
 We would like to thank our evaluation participants from TU Darmstadt and Fraunhofer IGD.
 
 % \newpage
