--- a/Paper/Paper.tex
+++ b/Paper/Paper.tex
@@ -50,22 +50,25 @@
 
 \maketitle
 \begin{abstract}
-Zwei flinke Boxer jagen die quirlige Eva und ihren Mops durch Sylt. Franz jagt im komplett verwahrlosten Taxi quer durch Bayern. Zwölf Boxkämpfer jagen Viktor quer über den großen Sylter Deich. Vogel Quax zwickt Johnys Pferd Bim. Sylvia wagt quick den Jux bei Pforzheim. Polyfon zwitschernd aßen Mäxchens Vögel Rüben, Joghurt und Quark. "Fix, Schwyz! " quäkt Jürgen blöd vom Paß. Victor jagt zwölf Boxkämpfer quer über den großen Sylter Deich. Falsches Üben von Xylophonmusik quält jeden größeren Zwerg. 
+Activity recognition solely with an accelerometer is a common investigated research topic and enables the detection of basic activities like sit, walk or stand. Recent work in this area adds different sensing modalities to the inertial data to collect more information of the users environment and to boost activity recognition.  We present a sensor set-up that consists of an accelerometer and a capacitive proximity sensor that senses the users activity based on the combined sensor values. We show that our proposed approach improves the recognition rate significantly for detecting activities of daily living (e.g. open door, prepare dinner, etc.) by adding capacitive proximity sensor data to the inertial data.
 \keywords{ambient assisted living, capacitive proximity sensors, activity recognition, user context}
 \end{abstract}
 
 \section{Introduction}
-Current wearable activity recognition systems are able to unobtrusively capture and recognize a person's activities throughout the whole day. These systems often rely on inertial sensor data that is captured by wearable sensors attached to the body to identify the activities performed. However, it is a great challenge to identify fine-grained activities just by using this single modality. In this paper, we have obtained and use a wrist-worn activity data logger\footnote{HedgeHog Activity Logger -- \url{http://www.ess.tu-darmstadt.de/hedgehog}} and investigate the possibility of integrating a capacitive proximity sensor unobtrusively into the wristband to obtain higher recognition rates for several activities in daily life.
 
-Capacitive proximity sensors can indirectly measure the distance and nature of a grounded object within reach. This means that the measurement result depends on the object's distance, its size and the material it is made of. A wristband worn capacitive proximity sensor requires a shield that eliminates the influence of the grounded arm directly underneath the sensor. Using this setup, we can detect the proximity to a grounded object in the environments for distances up to 20 cm. Especially for mobile devices, it is required that the sensor only draws a very small amount of power. Thus, other proximity sensing input modalities like ultrasound or optical measurements are not applicable for this type of mobile application.
+Sensing a persons activity is being researched for several years now, raising even more interest in it by the advanced technology of mobile phones, which include multiple sensors and therefore enable activity recognition with such a device \cite{brezmes2009activity}. Current wearable activity recognition systems are able to unobtrusively capture and recognize a person's activities throughout the whole day. These systems often rely on inertial sensor data that is captured by wearable sensors embedded in a mobile device \cite{brezmes2009activity} or attached to the body \cite{Ravi2005} to identify the activities performed. Usually, single sensor modalities are used or duplicated to detect the activities. However, it is a great challenge to identify fine-grained activities just by using a single modality like the accelerometer. Capacitive proximity sensors on the other hand can indirectly measure the distance and nature of a grounded object within reach. This means that the measurement result depends on the object's distance, its size and the material it is made of. In this work, we show how an accelerometer and a capacitive proximity sensor can be used to improve activity recognition in activities of daily living. For this we obtained a wrist-worn activity data logger\footnote{HedgeHog Activity Logger -- \url{http://www.ess.tu-darmstadt.de/hedgehog}} and integrate a capacitive proximity sensor unobtrusively into the wristband.
 
-There are several intuitive examples for which a combination of accelerometer-based activity recognition with a capacitive proximity sensor reveals its strength. For example, it may be conducted which material is placed underneath the hand. The capacitive proximity sensor would return a different measurement result for a hand placed on a couch covered with fabric than a hand placed a wooden table. Moreover, the approximate distance to objects can be exploited to identify activities like grasping into a locker or a refrigerator  to prepare food.
+There are several intuitive examples for which a combination of accelerometer-based activity recognition with a capacitive proximity sensor reveals its strength. For example, it may be conducted which material is placed underneath the hand. The capacitive proximity sensor would return a different measurement result for a hand placed on a couch covered with fabric than a hand placed a wooden table. Moreover, the approximate distance to objects can be exploited to identify activities like grasping into a locker or a refrigerator to prepare food.
+
+A wristband worn capacitive proximity sensor requires a shield that eliminates the influence of the grounded arm directly underneath the sensor. Using this setup, we can detect the proximity to a grounded object in the environments for distances up to 20 cm. Especially for mobile devices, it is required that the sensor only draws a very small amount of power. Thus, other proximity sensing input modalities like ultrasound or optical measurements are not applicable for this type of mobile application.
+
+This paper is structured as follows: We give a short insight in related work in chapter 2, followed by describing the hardware set-up used for this study in chapter 3. The experiment and evaluation will be described in chapter 4, showing how data has been obtained and how activity recognition is being improved. This work is concluded in chapter 5 with an outlook to future work.
 
 \section{Related Work}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-The field of activity recognition relying on wearable sensors mostly considers inertial data from the participants body to infer performed activities, such as in the works of \cite{Ravi2005,Bao2004,Srinivasan2010,Amft2005}. The acceleration data is often augmented with data from sensors such as gyroscopes \cite{Holleczek_2010}, magnetometers \cite{Altun_2010}, ambient light \cite{Borazio2012} or ambient and skin temperature \cite{Krause_2003}, aiming at extracting more motion and environmental context of the user. Researchers in \cite{wyss2010recognition}, for example, use heart rate information additionally to the accelerometer to detect military related activities like lifting and lowering loads or even digging. In \cite{Ward_2006}, workshop assembly activities were detected by augmenting acceleration sensors with microphones.
+Activity recognition research relying on wearable sensors mostly considers inertial data from the participants body to infer performed activities, such as in the works of \cite{Ravi2005,Bao2004,Srinivasan2010,Amft2005}. The acceleration data is often augmented with data from sensors such as gyroscopes \cite{Holleczek_2010}, magnetometers \cite{Altun_2010}, ambient light \cite{Borazio2012} or ambient and skin temperature \cite{Krause_2003}, aiming at extracting more motion and environmental context of the user. Researchers in \cite{wyss2010recognition}, for example, use heart rate information additionally to the accelerometer to detect military related activities like lifting and lowering loads or even digging. In \cite{Ward_2006}, workshop assembly activities were detected by augmenting acceleration sensors with microphones.
 
 The works of \cite{Fishkin_2005} and \cite{patterson2005fga} show that detecting objects the user touches or uses can be very helpful for activity recognition, including activities of daily living \cite{phealth:maja} and \cite{Philipose_2004}, activity tracking in car manufacturing \cite{Stiefmeier08}, etc. Berlin et al. \cite{berlin_laerhoven_tei_2010} have augmented a wrist-worn accelerometer sensor node with an RFID bracelet to be able to detect objects a human is interacting with, aiming both at household as well as gardening activities.
 
@@ -147,33 +150,108 @@ This section presents the experimental setup including the activities and the pa
 
 The experiment setup aims to depict a typical scenario in daily life. Especially in the field of Ambient Assisted Living (AAL), it is desired to monitor activities like drinking, preparing lunch and sleeping. A fine-grained monitoring of such activities may help elderly or people suffering from mental diseases to maintain a healthy day/night rhythm and take action if irregularities occur. Figure blubb shows the modified HedgeHog activity logger that has been extended with a capacitive proximity sensor. The wristband has two electrodes, a sensing electrode underneath a slightly bigger shield electrode. 
 
-[Hier Figure Aufbau]
+The recorded test set contains the following activities: opening door, sitting on a couch, lying on a couch, grasping into a locker, sitting at the table, preparing a bread with marmalade, eating the bread, drinking water and sleeping. Some of those activities are very hard to recognize without any further contextual information, when the data is limited to a single modality like a 3D accelerometer. For example, sitting at the table and sitting on a couch are very similar activities. We aim to show that the data basis can be significantly improved by the additional input modality. 
 
-The recorded test set contains the following activities: opening door, sitting on a couch, lying on a couch, grasping into a locker, putting something from a shelf, sitting at the table, preparing a bread with marmalade, eating the bread, pouring water, drinking the water and sleeping. Some of those activities are very hard to recognize without any further contextual information, when the data is limited to a single modality like a 3D accelerometer. For example, sitting at the table and sitting on a couch are very similar activities. The data of a capacitive proximity sensor can extend this data basis by providing that is related to the material an object is made of.
+In order to evaluate if capacitive proximity sensors in wrist-bands can enhance the performance of activity recognition, we have conducted an evaluation with 7 test persons. All test persons received a basic plot with the activities they were supposed to perform. They were not given any instructions about the way they are supposed to perform the activities. After manual labeling, we used this test-set as ground truth and performed a 4-fold cross-validation on an support-vector machine (SVM) classifier on each user, once with and once without including the data of the capacitive proximity sensor into the feature set. We used an SVM classifier because of its high relevance in activity recognition and its fast performance. 
 
-\begin{figure}
-	\centering
-		\includegraphics[width=\textwidth]{../Auswertung/images/eugen_7.pdf}
-	\caption{An example of the ``drinking'' activity with raw 3D acceleration data (lower plot) and proximity sensor data (upper plot). The participant took five nips from the glass, while leaving the hands lying on the table in between. These motions can be easily detected in the acceleration as well as proximity data.}
-	\label{fig:drinking}
-\end{figure}
-
-\begin{figure}
-	\centering
-		\includegraphics[width=\textwidth]{../Auswertung/images/eugen_5.pdf}
-	\caption{An example of the ``preparing bread'' activity, where the participants had to put marmalade on a toast. Note, that the acceleration data does not seem to have any characteristic patterns, while the proximity sensor indicates a table, plate, or other objects in immediate distance.}
-	\label{fig:making-bread}
-\end{figure}
-
-Figure \ref{fig:drinking} depicts the data that was recorded for the activity drinking water. The accelerometer data shows that there periodic up- and down-movements while the capacitive proximity sensor delivers data that is associated to the proximity of the table. Figure \ref{fig:making-bread} illustrates the preparation of a bread with marmalade while preparing lunch. It is obvious that the capacitive proximity sensor's data provides valuable information about the distance of the wristband to the table. 
-
-In order to evaluate if capacitive proximity sensors in wrist-bands can enhance the performance of activity recognition, we have conducted an evaluation with seven test persons. All test persons received a plot with the activities they were supposed to perform. After manual labeling, we used this test-set as ground truth and performed a 4-fold cross-validation on an support-vector machine (SVM) classifier once with and once without including the data of the capacitive proximity sensor into the feature set. We used an SVM classifier because of its high relevance in activity recognition and its fast performance. 
-
-The classifier was trained with various features that were extracted from windows with the length of 1 second. It turned out that greater window sizes do not provide better results. In order to suppress noise contained in the capacitive proximity sensing data, we applied a moving average filter with a kernel size of 10. The final feature set contained the arithmetic mean and standard variance of both accelerometer and proximity data. These simple feature types represent standard features applied in activity recognition.
+The classifier was trained with various features that were extracted from windows with the length of 1 second. It turned out that greater window sizes do not provide better results. In order to suppress noise contained in the capacitive proximity sensing data, we applied a moving average filter with a kernel size of 10. The final feature set contained the arithmetic mean, min, max, median and standard variance of both accelerometer and proximity data. These simple feature types represent standard features applied in activity recognition. 
 
 \subsection{Evaluation Results}
 
+In the following, the performed activities will be analyzed in detail, stating out the influence of the capacitive proximity sensor on the classification result. In general, the usage of data provided by the new modality showed improvements in recognition rates by 2.4 - 14.4 \%.
 
+\begin{figure}[htbp]
+	\centering
+		\includegraphics[width=1.00\textwidth]{../Auswertung/images/tobias_1.pdf}
+	\caption{While entering the door, the wristband approaches the door knob twice, while opening and closing. Regarding the capacitive proximity sensor, this situation can be observed at the beginning and at the end of the activity.}
+	\label{fig:tobias_1}
+\end{figure}
+
+The opening door activity has very poor recongition rates without the including the proximity sensor. The average f-measure could be increased from of 34.2 \% to 46.8 \%. A plot of the activity is given in Figure \ref{fig:tobias_1}. The capacitive proximity sensor shows two approaches to the door knob, one for opening the door (2 s) and one for closing the door (9 s). The acceleration sensor captures relevant data in the time in which the person moves into the room and the hand changes from the outer to the inner door knob (5 - 7 s). The recorded data for this activity shows strong correlations between all test persons. 
+
+\begin{figure}[htbp]
+	\centering
+		\includegraphics[width=1.00\textwidth]{../Auswertung/images/eugen_2.pdf}
+	\caption{Example of a ``sitting'' activity in which user changed his position very frequently. Throughout the whole activity the values of the proximity sensor stay constant due to the close proximity to the couch's fabric.}
+	\label{fig:eugen_2}
+\end{figure}
+
+After closing the door, the test persons were supposed to sit down on the couch. It turned out that there are great variations of the sitting posture and the corresponding hand positions. Many users tapped with their fingers or hands while sitting, and changed their sitting positions very frequently as shown in Figure \ref{fig:eugen_2}. In this case, it is obvious that the data from the acceleration sensor is very difficult to interprete as there are numerous changes in the axial orientation of the sensor. However, the capacitive proximity sensor is able to indicate when a hand is placed on the surface of the couch. Especially for this test person, the f-measure increased from 27.4 \% to 66.7 \%, while the average f-measure improved from 68.1 \% to 77.6 \%. 
+
+In the following, the test persons were supposed to lay down on the couch. Again, there were great variations in performing this activity between all participants. For example, some of them crossed their hands under their head. For that class, the average f-measure could only be increased by 2.4 \%, from 82.1 to 84.5 \%. The participants were also asked to put food and dishes from a shelf and a locker on a table. The capacitive proximity sensor captured the proximity to the shelf and to the table. The overall f-measure for this activity is quite low, but improved by 6.7 \% from 50.4 \% to 57.1\%. 
+
+\begin{figure}[htpb]
+	\centering
+		\includegraphics[width=\textwidth]{../Auswertung/images/eugen_5.pdf}
+	\caption{An example of the ``preparing bread'' activity, where the participants had to put marmalade on a toast. The proximity sensor indicates the closeness to the table, while the acceleration sensor shows reoccurring movements.}
+	\label{fig:eugen_5}
+\end{figure}
+
+Figure \ref{fig:eugen_5} shows an example instance of preparing a bread with marmelade. It is notable that the acceleration data does not seem to provide any characteristic patterns, while the proximity sensor indicates a table, plate, or other objects in immediate distance. This activity showed a high improvement in the average f-measure by 10 \%, from 49.0 \% to 59.8 \%, when the capacitive proximity sensor is taken into account. 
+
+\begin{figure}[htpb]
+	\centering
+		\includegraphics[width=\textwidth]{../Auswertung/images/eugen_6.pdf}
+	\caption{An eating person who took 5 bites from the bread. After each bite, the hand is placed on the table.}
+	\label{fig:eugen_6}
+\end{figure}
+
+Considering the eating activity, the influence of the capacitive proximity sensor is very low. Some of the participants ate their bread leaving their hand close to the mouth, while others moved their hand up and down putting their bread aside on the plate. A good example of an eating activity is shown in Figure \ref{fig:eugen_6} where the participant took a few bites from the bread. The average f-measure for that activity increased slightly from 80.3 \% to 83.8 \%. 
+
+\begin{figure}[htpb]
+	\centering
+		\includegraphics[width=\textwidth]{../Auswertung/images/eugen_7.pdf}
+	\caption{An example of the ``drinking'' activity of a test person. The participant first pours some water into the glass and then takes three drams of water. After each dram, he returns his arm to the table which can be observed in the characteristic patterns of the proximity sensor.}
+	\label{fig:eugen_7}
+\end{figure}
+
+The activity drinking water is depicted in Figure \ref{fig:eugen_7}. The participant took five nips from the glass, while leaving the hands lying on the table in between. These motions can be easily detected in the acceleration as well as proximity data. The accelerometer data shows that there periodic up- and down-movements while the capacitive proximity sensor delivers data that is associated to the proximity of the table.
+
+\begin{figure}[htbp]
+	\centering
+		\includegraphics[width=1.00\textwidth]{../Auswertung/images/marko_8.pdf}
+	\caption{An examplary instance of the class ``walking''. The acceleration sensor and the proximity sensor show periodic reoccuring patterns that are related to the pendulum-like arm movement and the proximity to the person's body during those movements.}
+	\label{fig:marko_8}
+\end{figure}
+
+Regarding the walking activity one can identify periodic changes in the acceleration as well as in the measured capacitance, illustrated in Figure \ref{fig:marko_8}. While walking, the capacitance between the wristband and the leg increases when the wristband is located close to the body and decrease when the wristband moves away. 
+
+\begin{figure}[htbp]
+	\centering
+		\includegraphics[width=1.00\textwidth]{../Auswertung/images/eugen_9.pdf}
+	\caption{During the sleeping activity the data from both sensors remains constant. One draw conclusions about the coverage of the arm with either couchons, blankets or the proximity to the mattress.}
+	\label{fig:eugen_9}
+\end{figure}
+
+The sleeping activity was captured with an average f-measure of 83.4 \% that increased to 88.4 \% when using the capacitive proximity sensor. In this situation the capacitive proximity sensor is able to capture the surrounding couchons and blankets. The accelerometer data and the proximity data is very constant during that activity. 
+
+\begin{table}[htbp]
+	\centering	\begin{tabular}{p{0.48cm}p{0.48cm}p{0.48cm}p{0.48cm}p{0.48cm}p{0.48cm}p{0.48cm}p{0.48cm}p{0.48cm}|p{0.48cm}p{0.48cm}p{0.48cm}p{0.48cm}p{0.48cm}p{0.48cm}p{0.48cm}p{0.48cm}p{0.48cm}|p{2.2cm}}
+a & b & c & d & e & f & g & h & i & a & b & c & d & e & f & g & h & i & $\leftarrow$ classified as\\
+\hline
+10 & 3 & 0 & 2 & 0 & 0 & 0 & 0 & 0 		& 9 & 5 & 0 & 0 & 1 & 0 & 0 & 0 & 0 & a = open door\\
+\hline
+2 & 259 & 4 & 2 & 4 & 2 & 4 & 0 & 0 	& 1 & 248 & 5 & 6 & 4 & 2 & 5 & 0 & 0 & b = sit\\
+\hline
+0 & 5 & 213 & 2 & 2 & 1 & 8 & 0 & 4 	& 0 & 3 & 212 & 3 & 2 & 1 & 6 & 0 & 8 & c = lying\\
+\hline
+3 & 5 & 2 & 52 & 9 & 3 & 1 & 1 & 1 		& 0 & 8 & 2 & 44 & 7 & 8 & 1 & 1 & 3 & d = get things\\
+\hline
+1 & 9 & 3 & 13 & 46 & 6 & 3 & 0 & 0 	& 1 & 7 & 1 & 11 & 37 & 9 & 2 & 0 & 10 & e = make bread\\
+\hline
+0 & 5 & 1 & 1 & 5 & 62 & 5 & 0 & 1 		& 0 & 3 & 2 & 3 & 8 & 58 & 5 & 0 & 1 & f = eat\\
+\hline
+0 & 8 & 4 & 2 & 1 & 5 & 68 & 0 & 0 		& 0 & 8 & 3 & 0 & 6 & 4 & 67 & 0 & 1 & g = drink\\
+\hline
+1 & 0 & 0 & 1 & 0 & 0 & 0 & 12 & 0 		& 1 & 0 & 0 & 1 & 0 & 0 & 0 & 13 & 0 & h = walk\\
+\hline
+1 & 0 & 0 & 7 & 0 & 0 & 0 & 0 & 325 	& 0 & 1 & 2 & 10 & 6 & 1 & 1 & 0 & 312 & i = sleep\\
+		\end{tabular}
+	\caption{Comparison of two Confusion matrices for an exemplary user. The left part includes the capacitive proximity sensor, the right part represents classification results without the sensor.}
+	\label{tab:ConfusionMatrixForAnExemplaryUser}
+\end{table}
+
+Table \ref{tab:confmatrix} 
 
 \section{Conclusion and Outlook}
 
